# ELM

./: .dockerignore  .env.docker  .env.example  .gitignore  BUG_REPORT.md  CLAUDE.md  Dockerfile  FINAL_REPORT.md  FIXED_REPORT.md  IMPLEMENTATION_STATUS.md  PROJECT_REVIEW.md  PROJECT_SUMMARY.md  README.md  convert_to_docx.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  start.sh
apps/: setup-merchant-rider.sh
apps/customer/: README.md  package-lock.json  package.json  project.config.json
apps/merchant/: README.md  babel.config.js  package-lock.json  package.json  project.config.json  project.private.config.json  tailwind.config.js
apps/rider/: README.md
docker/: entrypoint.sh  nginx-spa.conf
docs/: 00-overview.md  01-database-design.md  01-overview.md  02-api-design.md  02-database-design.md  03-api-design.md  03-rbac-design.md  04-order-lifecycle.md  04-rbac-design.md  05-module-design.md  05-order-lifecycle.md  06-module-design.md  API.md  DEPLOY.md  DEVELOPMENT.md  TESTING.md  TEST_ACCOUNTS.md  分工文档.docx  分工文档.md  设计说明书.docx  设计说明书.md  问题.txt  零基础启动指南.md  需求分析.txt  需求说明书.docx  需求说明书.md
fronted/: DESIGN.md
fronted/Customer/: Dockerfile  index.html  package-lock.json  package.json
fronted/Manager/: Dockerfile  index.html  package.json
fronted/Merchant/: Dockerfile  index.html  package-lock.json  package.json
fronted/Rider/: Dockerfile  package-lock.json  package.json  tsconfig.json
fronted/shared/: Header.tsx  Toast.tsx  index.ts  types.ts
miniprogram/: setup-merchant-rider.sh
prompts/: docs-prompts.md
src/elm/: __init__.py  (+2 more)
(+208 files in other folders)
