[project]
name = "elm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wu05011", email = "wuhanjun05011@126.com" }
]
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.2",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg2-binary>=2.9.12",
    "redis>=8.0.1",
]

[tool.uv]
package = false
